# orbit-agent

./: .env  .env.example  .gitignore  CLAUDE.md  INSTALLER_README.md  Makefile  RELEASE_README.md  alembic.ini  available_models.txt  get_models.py  get_schemas.py  install.sh  install_fast.sh  pyproject.toml  requirements.txt  test_glm.py  test_glm_2.py  update_planner.py  verify_graph_output_2.txt  verify_responder_output.txt  verify_responder_output_2.txt  verify_results.txt  verify_safety_output.txt  verify_safety_output_v2.txt  verify_safety_output_v3.txt  verify_safety_output_v4.txt  verify_safety_output_v5.txt  verify_safety_output_v6.txt  web-install.sh
docs/: API_REFERENCE.md  DATABASE_SCHEMA.md  EMAIL_FEATURE_DESIGN.md  ENHANCED_INTENTS_GUIDE.md  IMPLEMENTATION_ROADMAP.md  JIRA_FEATURE_DESIGN.md  JIRA_IMPLEMENTATION_GUIDE.md  MCP_INTEGRATION_PLAN.md  MEMORY_MANAGEMENT.md  MULTI_AGENT_ORCHESTRATION_GUIDE.md  NESTJS_INTEGRATION.md  ORBIT_AI_PYTHON_BLUEPRINT.md  PHASE1_MEMORY_FOUNDATION.md  PHASE2_POSTGRESQL_SIMPLIFICATION.md  PHASE3_ADVANCED_FEATURES.md  PHASE4_API_INTEGRATION.md  PHASE5_FUTURE_ENHANCEMENTS.md  README_MEMORY.md  REFACTORING_BRIDGE_CLIENT.md  RELEASE.md  TAVILY_IMPLEMENTATION_GUIDE.md  TOOL_DANGER_LEVELS.md  USER_DOCUMENTATION_GUIDE.md
migrations/: env.py
scripts/: build_release.sh  list_models.py  verify_api.py  verify_bridge.py  verify_classifier.py  verify_graph.py  verify_llm.py  verify_phase2.py  verify_planner.py  verify_responder.py  verify_safety.py  verify_shell_tool.py
src/: config.py  exceptions.py  main.py
tests/: test_tavily.py  (+7 more)
(+129 files in other folders)
