[project]
name = "orbit-agent"
version = "0.1.0"
description = "Orbit AI Agent - Python microservice"
authors = [{ name = "Orbit Team" }]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "langgraph>=0.0.26",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.1",
    "langchain-google-genai>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.1",
    "pydantic-settings>=2.1.0",
    "asyncpg>=0.29.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
